// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Linklog component should render correctly 1`] = `
<main
  aria-labelledby="page-title"
  className="Main"
  id="main"
  tabIndex="-1"
>
  <SideEffect(DocumentMeta)
    canonical="https://example.test/linklog/"
    description="Short description used in tests."
    meta={
      Object {
        "name": Object {
          "twitter:card": "summary_large_image",
          "twitter:description": "Short description used in tests.",
          "twitter:image": "https://example.test/social.png",
          "twitter:title": "Test Name | Test Subtitle | Linklog",
        },
        "property": Object {
          "og:description": "Short description used in tests.",
          "og:image": "https://example.test/social.png",
          "og:site_name": "Test Name | Test Subtitle",
          "og:title": "Test Name | Test Subtitle | Linklog",
          "og:type": "website",
          "og:url": "https://example.test/linklog/",
        },
      }
    }
    title="Test Name | Test Subtitle | Linklog"
  />
  <section>
    <h2
      id="page-title"
      translate="no"
    >
      Linklog
    </h2>
    <div
      data-linklog-list={true}
    >
      Loading…
    </div>
    <p>
      Subscribe to
       
      <a
        href="https://feeds.pinboard.in/rss/secret:408c7b80a1d865c97e0a/u:monospaced"
        translate="no"
      >
        RSS feed
      </a>
      .
    </p>
  </section>
</main>
`;

exports[`Linklog component should render feed data correctly 1`] = `
<main
  aria-labelledby="page-title"
  className="Main"
  id="main"
  tabIndex="-1"
>
  <SideEffect(DocumentMeta)
    canonical="https://example.test/linklog/"
    description="Short description used in tests."
    meta={
      Object {
        "name": Object {
          "twitter:card": "summary_large_image",
          "twitter:description": "Short description used in tests.",
          "twitter:image": "https://example.test/social.png",
          "twitter:title": "Test Name | Test Subtitle | Linklog",
        },
        "property": Object {
          "og:description": "Short description used in tests.",
          "og:image": "https://example.test/social.png",
          "og:site_name": "Test Name | Test Subtitle",
          "og:title": "Test Name | Test Subtitle | Linklog",
          "og:type": "website",
          "og:url": "https://example.test/linklog/",
        },
      }
    }
    title="Test Name | Test Subtitle | Linklog"
  />
  <section>
    <h2
      id="page-title"
      translate="no"
    >
      Linklog
    </h2>
    <div
      data-linklog-list={true}
    >
      <ul>
        <li
          className="Linklog-item"
          key="2025-01-01T00:00:00Z"
        >
          <a
            href="https://example.com/mock-a"
          >
            Mock Link A
          </a>
           
          <TimeAgo
            datetime="2025-01-01T00:00:00Z"
            live={true}
            locale="en"
          />
          <span
            className="Linklog-description"
          >
            Mock note A.
          </span>
        </li>
        <li
          className="Linklog-item"
          key="2025-01-02T00:00:00Z"
        >
          <a
            href="https://example.com/mock-b"
          >
            Mock Link B
          </a>
           
          <TimeAgo
            datetime="2025-01-02T00:00:00Z"
            live={true}
            locale="en"
          />
          <span
            className="Linklog-description"
          />
        </li>
        <li
          className="Linklog-item"
          key="2025-01-03T00:00:00Z"
        >
          <a
            href="https://example.com/mock-c"
          >
            Mock Link C
          </a>
           
          <TimeAgo
            datetime="2025-01-03T00:00:00Z"
            live={true}
            locale="en"
          />
          <span
            className="Linklog-description"
          >
            Short mock note.
          </span>
        </li>
      </ul>
    </div>
    <p>
      Subscribe to
       
      <a
        href="https://feeds.pinboard.in/rss/secret:408c7b80a1d865c97e0a/u:monospaced"
        translate="no"
      >
        RSS feed
      </a>
      .
    </p>
  </section>
</main>
`;
